--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           <button>Add to Cart</button>
         </div>
         <div class="product-card">
+          <img src="images/watch.jpg" alt="Smart Watch" />
+          <h4>Smart Watch</h4>
+          <p>₹999</p>
+          <button>Add to Cart</button>
+        </div>
+        <div class="product-card">
           <img src="images/trimmer.jpg" alt="Trimmer" />
           <h4>Trimmer</h4>
           <p>₹799</p>
